--- a/specials.html
+++ b/specials.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Specials • Tennessee Gameday Hub (Unofficial)</title>
-  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-28-4" />
+
+  <meta name="asset-version" content="2025-08-28-5" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-28-5" />
+  <link rel="icon" href="assets/img/favicon.svg" />
 </head>
 <body>
   <a class="skip" href="#main">Skip to content</a>
@@ -13,29 +16,32 @@
     <div class="brand">TENNESSEE • <span>Gameday Hub</span></div>
     <nav class="nav">
       <a href="schedule.html">Schedule</a>
-      <a href="specials.html" class="active">Specials</a>
+      <a class="active" href="specials.html">Specials</a>
       <a href="map.html">Map</a>
       <a href="guide.html">Guide</a>
       <a class="btn btn-small" href="submit.html">Submit</a>
     </nav>
   </header>
 
-  <section class="ticker" aria-label="Gameday ticker"><div class="ticker-inner">Loading…</div></section>
+  <section class="ticker" aria-label="Gameday ticker">
+    <div class="ticker-inner" id="ticker">Loading…</div>
+  </section>
 
-  <main id="main" class="wrap">
+  <main id="main" class="wrap" aria-label="Main content">
     <section class="card">
-      <h1 class="hd">Featured Specials</h1>
+      <h1 class="h3">Featured Specials</h1>
       <div id="specialsGrid" class="specials-grid" style="margin-top:8px"></div>
       <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
-      <p class="muted">Data updated — <span data-last-updated>—</span></p>
+      <p class="muted">Data updated — <span id="last-updated">--</span></p>
     </section>
   </main>
 
   <footer class="sitefoot">
     <p><strong>Unofficial notice:</strong> Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.</p>
-    <p><a href="schedule.html">Schedule</a> • <a href="map.html">Map</a> • <a href="guide.html">Guide</a> • <a href="submit.html">Submit</a></p>
+    <p><a href="guide.html">Guide</a> • <a class="active" href="specials.html">Specials</a> • <a href="map.html">Map</a> • <a href="schedule.html">Schedule</a> • <a href="submit.html">Submit</a></p>
   </footer>
 
-  <script type="module" src="assets/js/app.js?v=2025-08-28-4"></script>
+  <!-- Core app paints specials grid + ticker/meta -->
+  <script type="module" src="assets/js/app.js?v=2025-08-28-5"></script>
 </body>
 </html>
