--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TENNESSEE • Gameday Hub</title>
-  <meta name="description" content="Fan-run, unofficial Tennessee football gameday guide: schedule, specials, map, and tips." />
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <title>TENNESSEE • Gameday Hub (Unofficial)</title>
 
-  <!-- Leaflet for mini map -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
+  <!-- Cache-bust version -->
+  <meta name="asset-version" content="2025-08-28-5" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-28-5" />
+  <link rel="icon" href="assets/img/favicon.svg" />
 </head>
 <body>
 <a class="skip" href="#main">Skip to content</a>
@@ -27,10 +26,7 @@
 
 <!-- Ticker (Top ribbon) -->
 <section class="ticker" aria-label="Gameday ticker">
-  <div class="wrap" style="display:flex;gap:10px;align-items:center;justify-content:space-between;flex-wrap:wrap">
-    <div id="kickoffTimer">Kickoff time TBA — Countdown 00d 00h 00m</div>
-    <small class="muted">Data updated — <span id="lastUpdated"></span></small>
-  </div>
+  <div class="ticker-inner" id="ticker">Kickoff time TBA — Countdown 00d 00h 00m</div>
 </section>
 
 <!-- HERO -->
@@ -43,6 +39,7 @@
       <a class="btn" href="schedule.html">View Schedule</a>
       <a class="btn ghost" href="specials.html">Find Specials</a>
       <a class="btn ghost" href="submit.html">Submit a Listing</a>
+      <a class="btn" id="addToCal" href="#" aria-disabled="true">Add to Calendar</a>
     </div>
     <div class="mini-countdown" aria-live="polite">
       <span>Kickoff in</span>
@@ -50,30 +47,71 @@
       <strong id="miniHours">00</strong>h :
       <strong id="miniMins">00</strong>m
     </div>
+    <p class="muted" style="margin-top:6px">Data updated — <span id="lastUpdated" data-last-updated>--</span></p>
   </div>
 </section>
 
 <main id="main" class="wrap" aria-label="Main content">
+
+  <!-- ========== NEW: Dedicated Live Score Box ========== -->
+  <section class="card scorebox" id="scoreBox" aria-live="polite">
+    <div class="score-head">
+      <span class="badge" id="scStatus">SCHEDULED</span>
+      <span class="muted" id="scKick">Kickoff TBA</span>
+    </div>
+
+    <div class="score-body">
+      <div class="score-row" aria-label="Away team">
+        <div class="team">
+          <span class="tag">Away</span>
+          <span class="name" id="scAwayName">Opponent</span>
+        </div>
+        <div class="score" id="scAwayScore">–</div>
+      </div>
+      <div class="score-row" aria-label="Home team">
+        <div class="team">
+          <span class="tag">Home</span>
+          <span class="name" id="scHomeName">Tennessee</span>
+        </div>
+        <div class="score" id="scHomeScore">–</div>
+      </div>
+    </div>
+
+    <div class="score-foot">
+      <div class="meta">
+        <span id="scPeriod">—</span>
+        <span id="scClock">—</span>
+        <span id="scTV">TV: —</span>
+      </div>
+      <div class="venue">
+        <span id="scVenue">Venue: —</span>
+      </div>
+    </div>
+  </section>
+  <!-- ================================================== -->
+
   <!-- QUICK GLANCE ROW -->
   <section class="row-quick">
     <!-- Upcoming Game -->
     <article class="card">
       <h2 class="hd">Upcoming Game</h2>
-      <p class="big"><strong>Tennessee</strong> <span class="vs">vs</span> <span id="qOpp">Opponent</span></p>
-      <p class="sub"><span id="qDate">Date • Time</span></p>
-      <p class="muted" id="qVenue">Venue</p>
-      <p><a class="btn btn-small" href="schedule.html">Full schedule</a></p>
+      <p class="big" id="who"><strong>Tennessee</strong> <span class="vs">vs</span> <span id="qOpp">Opponent</span></p>
+      <p class="sub" id="when">Date • Time</p>
+      <p class="muted" id="where">Venue</p>
+      <p><a class="btn btn-small" id="addToCalendar" href="#" aria-disabled="true">Add to Calendar</a></p>
     </article>
 
-    <!-- Weather (stub pulled from /data/weather.json by app.js for next game) -->
+    <!-- Weather (3-day) -->
     <article class="card">
       <h2 class="hd">Weather (3-day)</h2>
-      <ul class="wx">
-        <li><b>Fri</b> <span>—/—</span> <em>—%</em></li>
-        <li><b>Sat</b> <span>—/—</span> <em>—%</em></li>
-        <li><b>Sun</b> <span>—/—</span> <em>—%</em></li>
-      </ul>
-      <p class="muted">Forecasts change—check again closer to kickoff.</p>
+      <div id="weather">
+        <ul class="wx">
+          <li><b>Fri</b> <span>—/—</span> <em>—%</em></li>
+          <li><b>Sat</b> <span>—/—</span> <em>—%</em></li>
+          <li><b>Sun</b> <span>—/—</span> <em>—%</em></li>
+        </ul>
+        <p class="muted">Forecasts change—check again closer to kickoff.</p>
+      </div>
     </article>
 
     <!-- This Week in Knoxville -->
@@ -118,7 +156,6 @@
       <!-- Map card -->
       <section id="map" class="card">
         <h2 class="hd">Map</h2>
-        <div id="miniMap" style="width:100%; min-height:220px; border-radius:12px; overflow:hidden;"></div>
         <p class="muted" style="margin-top:8px">We’ll add an interactive map with categories and “Open now”.</p>
       </section>
 
@@ -149,17 +186,6 @@
         <p>Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
         <a class="btn" href="submit.html">Open form</a>
       </section>
-
-      <!-- Newsletter -->
-      <section class="card">
-        <h2 class="hd">Newsletter</h2>
-        <p>Get a quick gameday morning email: kickoff time, weather, and new specials.</p>
-        <form class="nl" onsubmit="event.preventDefault(); alert('Thanks!');">
-          <input type="email" placeholder="you@example.com" required>
-          <button class="btn">Subscribe</button>
-        </form>
-        <p class="muted">We don’t sell your data. Unsubscribe anytime.</p>
-      </section>
     </aside>
   </section>
 
@@ -168,10 +194,10 @@
     <div class="guide-head">
       <h2 class="hd">Gameday Guide (Unofficial)</h2>
       <div class="countdown" aria-live="polite">
-        <div class="blk"><span id="cdD">00</span><em>days</em></div>
-        <div class="blk"><span id="cdH">00</span><em>hrs</em></div>
-        <div class="blk"><span id="cdM">00</span><em>min</em></div>
-        <div class="blk"><span id="cdS">00</span><em>sec</em></div>
+        <div class="blk"><span id="cDD">00</span><em>days</em></div>
+        <div class="blk"><span id="cHH">00</span><em>hrs</em></div>
+        <div class="blk"><span id="cMM">00</span><em>min</em></div>
+        <div class="blk"><span id="cSS">00</span><em>sec</em></div>
       </div>
     </div>
     <div class="guide-grid">
@@ -205,14 +231,16 @@
   <p>
     <a href="guide.html">Guide</a> •
     <a href="specials.html">Specials</a> •
-    <a href="schedule.html">Schedule</a> •
     <a href="map.html">Map</a> •
+    <a href="schedule.html">Schedule</a> •
     <a href="submit.html">Submit</a>
   </p>
-  <p class="muted">© 2025 HC Web Labs. Content licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" rel="noopener" target="_blank">CC BY-NC-ND 4.0</a>.</p>
+  <p class="muted">© 2025 HC Web Labs. Content licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a>.</p>
 </footer>
 
 <!-- App JS (reads /data/*.json built by GitHub Actions) -->
-<script type="module" src="assets/js/app.js"></script>
+<script type="module" src="assets/js/app.js?v=2025-08-28-5"></script>
+<!-- Live scoreboard (NEW) -->
+<script type="module" src="assets/js/live.js?v=2025-08-28-5"></script>
 </body>
 </html>
