--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 <a class="skip" href="#main">Skip to content</a>
 
 <header class="topbar">
-  <div class="brand">TENNESSEE • <span>Gameday Hub</span></div>
+  <div class="brand">
+    <h1 class="sr-only">Tennessee</h1>
+    <img class="wordmark" src="assets/img/tn-wordmark-glossy.jpg?v=1" width="1346" height="424" alt="Tennessee">
+  </div>
+
   <nav class="nav">
     <a href="schedule.html">Schedule</a>
     <a href="specials.html">Specials</a>
@@ -27,6 +31,8 @@
     <a class="btn btn-small" href="submit.html">Submit</a>
   </nav>
 </header>
+
+<p class="muted" style="margin:6px 0 18px;">Fan-run. Unofficial. Built by fans for fans.</p>
 
 <!-- Ticker (Top ribbon) -->
 <section class="ticker" aria-label="Gameday ticker">
