--- a/index.html
+++ b/index.html
@@ -4,241 +4,109 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TENNESSEE • Gameday Hub (Unofficial)</title>
-
-  <!-- Cache-bust version -->
-  <meta name="asset-version" content="2025-08-28-5" />
-  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-28-5" />
-  <link rel="icon" href="assets/img/favicon.svg" />
+  <meta name="description" content="Unofficial Tennessee football gameday guide: schedule, TV/streams, map, and tips." />
+  <link rel="preload" as="image" href="assets/img/tn-wordmark-glossy.png" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-28-7" />
+  <meta name="theme-color" content="#0b0f14" />
 </head>
+
 <body>
-  <body data-bg="metal">
-<!-- or -->
-<!-- <body data-bg="clay"> -->
+  <a class="skip" href="#main">Skip to content</a>
 
-<a class="skip" href="#main">Skip to content</a>
+  <header class="topbar">
+    <nav class="nav">
+      <a class="brand-mini" href="index.html" aria-label="Tennessee Gameday Hub">TN</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="specials.html">Specials</a>
+      <a href="map.html">Map</a>
+      <a href="guide.html">Guide</a>
+      <a class="btn btn-small" href="submit.html">Submit</a>
+    </nav>
 
-<header class="topbar">
-  <div class="brand">
-    <h1 class="sr-only">Tennessee</h1>
-    <img class="wordmark" src="assets/img/tn-wordmark-glossy.jpg?v=1" width="1346" height="424" alt="Tennessee">
-  </div>
+    <!-- Single hero wordmark (uses transparent PNG via CSS) -->
+    <h1 class="brand" aria-label="Tennessee">TENNESSEE</h1>
+    <p class="tagline">Fan-run. Unofficial. Built by fans for fans.</p>
+  </header>
 
-  <nav class="nav">
-    <a href="schedule.html">Schedule</a>
-    <a href="specials.html">Specials</a>
-    <a href="map.html">Map</a>
-    <a href="guide.html">Guide</a>
-    <a class="btn btn-small" href="submit.html">Submit</a>
-  </nav>
-</header>
-
-<p class="muted" style="margin:6px 0 18px;">Fan-run. Unofficial. Built by fans for fans.</p>
-
-<!-- Ticker (Top ribbon) -->
-<section class="ticker" aria-label="Gameday ticker">
-  <div class="ticker-inner" id="ticker">Kickoff time TBA — Countdown 00d 00h 00m</div>
-</section>
-
-<!-- HERO: dark background, glossy wordmark only -->
-<section class="hero hero-plain">
-  <div class="wrap hero-inner">
-    <h1 class="sr-only">Tennessee</h1>
-    <img class="wordmark-img" src="assets/img/glossy-tennessee.png" alt="Tennessee">
-    <p class="site-tag">Fan-run. Unofficial. Built by fans for fans.</p>
-  </div>
-</section>
-
-
-<main id="main" class="wrap" aria-label="Main content">
-
-  <!-- ========== NEW: Dedicated Live Score Box ========== -->
-  <section class="card scorebox" id="scoreBox" aria-live="polite">
-    <div class="score-head">
-      <span class="badge" id="scStatus">SCHEDULED</span>
-      <span class="muted" id="scKick">Kickoff TBA</span>
-    </div>
-
-    <div class="score-body">
-      <div class="score-row" aria-label="Away team">
-        <div class="team">
-          <span class="tag">Away</span>
-          <span class="name" id="scAwayName">Opponent</span>
+  <main id="main" class="wrap" aria-label="Main content">
+    <!-- Score Box (live) -->
+    <section class="card">
+      <h2 class="h6">Live Score Box</h2>
+      <div id="scorebox" class="scorebox">
+        <div class="scorebox-row">
+          <span id="sbAwayName" class="team">Away team</span>
+          <span id="sbAwayScore" class="score">–</span>
         </div>
-        <div class="score" id="scAwayScore">–</div>
-      </div>
-      <div class="score-row" aria-label="Home team">
-        <div class="team">
-          <span class="tag">Home</span>
-          <span class="name" id="scHomeName">Tennessee</span>
+        <div class="scorebox-row">
+          <span id="sbHomeName" class="team">Home team</span>
+          <span id="sbHomeScore" class="score">–</span>
         </div>
-        <div class="score" id="scHomeScore">–</div>
+        <div class="scorebox-meta">
+          <span id="sbStatus">No game in progress.</span>
+          <span id="sbClock" class="muted"></span>
+        </div>
       </div>
-    </div>
+    </section>
 
-    <div class="score-foot">
-      <div class="meta">
-        <span id="scPeriod">—</span>
-        <span id="scClock">—</span>
-        <span id="scTV">TV: —</span>
-      </div>
-      <div class="venue">
-        <span id="scVenue">Venue: —</span>
-      </div>
-    </div>
-  </section>
-  <!-- ================================================== -->
-
-  <!-- QUICK GLANCE ROW -->
-  <section class="row-quick">
     <!-- Upcoming Game -->
-    <article class="card">
-      <h2 class="hd">Upcoming Game</h2>
-      <p class="big" id="who"><strong>Tennessee</strong> <span class="vs">vs</span> <span id="qOpp">Opponent</span></p>
-      <p class="sub" id="when">Date • Time</p>
-      <p class="muted" id="where">Venue</p>
-      <p><a class="btn btn-small" id="addToCalendar" href="#" aria-disabled="true">Add to Calendar</a></p>
-    </article>
+    <section class="grid">
+      <article class="card">
+        <h2 class="h6">Upcoming Game</h2>
+        <div id="next">
+          <div id="nextMatch" class="strong">Loading…</div>
+          <div><time id="nextTime"></time></div>
+          <div id="nextVenue" class="muted"></div>
+          <button id="btnAddCal" class="btn btn-small" disabled>Add to Calendar</button>
+        </div>
+      </article>
 
-    <!-- Weather (3-day) -->
-    <article class="card">
-      <h2 class="hd">Weather (3-day)</h2>
-      <div id="weather">
-        <ul class="wx">
-          <li><b>Fri</b> <span>—/—</span> <em>—%</em></li>
-          <li><b>Sat</b> <span>—/—</span> <em>—%</em></li>
-          <li><b>Sun</b> <span>—/—</span> <em>—%</em></li>
+      <!-- Weather (placeholder; your GH Action can still refresh /data/weather.json) -->
+      <article class="card">
+        <h2 class="h6">Weather (3-day)</h2>
+        <ul id="wx3" class="list-condensed">
+          <li>Fri — <span class="muted">—</span></li>
+          <li>Sat — <span class="muted">—</span></li>
+          <li>Sun — <span class="muted">—</span></li>
         </ul>
         <p class="muted">Forecasts change—check again closer to kickoff.</p>
+      </article>
+
+      <article class="card">
+        <h2 class="h6">This Week in Knoxville</h2>
+        <ul class="list-condensed">
+          <li><a target="_blank" rel="noopener" href="#">Market Square Live Music</a></li>
+          <li><a target="_blank" rel="noopener" href="#">Old City Night Market</a></li>
+          <li><a target="_blank" rel="noopener" href="#">Downtown Brunch Crawl</a></li>
+        </ul>
+      </article>
+    </section>
+
+    <!-- Schedule table -->
+    <section class="card" style="margin-top: 18px">
+      <div class="flex between center">
+        <h2 class="h6" style="margin:0">Schedule & Results</h2>
+        <small class="muted">Data updated — <span class="date-last-updated">loading…</span></small>
       </div>
-    </article>
-
-    <!-- This Week in Knoxville -->
-    <article class="card">
-      <h2 class="hd">This Week in Knoxville</h2>
-      <ul class="links">
-        <li><a href="#" target="_blank" rel="noopener">Market Square Live Music</a></li>
-        <li><a href="#" target="_blank" rel="noopener">Old City Night Market</a></li>
-        <li><a href="#" target="_blank" rel="noopener">Downtown Brunch Crawl</a></li>
-      </ul>
-    </article>
-  </section>
-
-  <!-- MAIN GRID -->
-  <section class="grid-main">
-    <!-- LEFT (8 cols) -->
-    <div class="left">
-      <!-- Schedule -->
-      <section id="schedule" class="card">
-        <h2 class="hd">Schedule & Results</h2>
-        <div class="table-wrap">
-          <table class="tbl" aria-describedby="schNote">
-            <thead>
-              <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
-            </thead>
-            <tbody id="schBody"></tbody>
-          </table>
-        </div>
-        <p id="schNote" class="muted">Times/TV subject to change. Check official sources day-of.</p>
-      </section>
-
-      <!-- Featured specials -->
-      <section id="specials" class="card">
-        <h2 class="hd">Featured Specials</h2>
-        <div class="specials-grid" id="specialsGrid"></div>
-        <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
-      </section>
-    </div>
-
-    <!-- RIGHT (4 cols) -->
-    <aside class="right">
-      <!-- Map card -->
-      <section id="map" class="card">
-        <h2 class="hd">Map</h2>
-        <p class="muted" style="margin-top:8px">We’ll add an interactive map with categories and “Open now”.</p>
-      </section>
-
-      <!-- TV / Streams -->
-      <section class="card" id="tvCard">
-        <h2 class="hd">TV & Streams (This Week)</h2>
-        <ul id="tvList" class="links" style="margin:0; padding-left:18px"></ul>
-        <p class="muted" id="tvNote">Updates closer to kickoff.</p>
-      </section>
-
-      <!-- Odds / Lines -->
-      <section class="card" id="oddsCard">
-        <h2 class="hd">Odds</h2>
-        <div id="oddsBox" class="muted">Loading…</div>
-        <p class="muted" style="margin-top:8px">For entertainment only. Check a licensed sportsbook for current numbers.</p>
-      </section>
-
-      <!-- Rankings -->
-      <section class="card" id="rankCard">
-        <h2 class="hd">Rankings (AP Top 25)</h2>
-        <ol id="rankList" style="margin:0; padding-left:18px"></ol>
-        <p class="muted" id="rankNote"></p>
-      </section>
-
-      <!-- Submit CTA -->
-      <section class="card cta">
-        <h2 class="hd">Submit a Listing</h2>
-        <p>Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
-        <a class="btn" href="submit.html">Open form</a>
-      </section>
-    </aside>
-  </section>
-
-  <!-- GUIDE -->
-  <section id="guide" class="card guide">
-    <div class="guide-head">
-      <h2 class="hd">Gameday Guide (Unofficial)</h2>
-      <div class="countdown" aria-live="polite">
-        <div class="blk"><span id="cDD">00</span><em>days</em></div>
-        <div class="blk"><span id="cHH">00</span><em>hrs</em></div>
-        <div class="blk"><span id="cMM">00</span><em>min</em></div>
-        <div class="blk"><span id="cSS">00</span><em>sec</em></div>
+      <div class="table-wrap" style="margin-top:12px">
+        <table class="table" aria-describedby="schNote">
+          <thead>
+            <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
+          </thead>
+          <tbody id="sched"></tbody>
+        </table>
       </div>
-    </div>
-    <div class="guide-grid">
-      <article><h3>Getting There</h3><ul>
-        <li>Rideshare or public lots; expect road closures near campus.</li>
-        <li>Plan 60–90 minutes for traffic and entry queues.</li>
-        <li>Pick a meetup spot in case phones die.</li>
-      </ul></article>
-      <article><h3>Entry & Bags</h3><ul>
-        <li>Many venues have clear-bag rules and metal detectors.</li>
-        <li>Leave large items, outside alcohol, and pointed umbrellas at home.</li>
-        <li>Always verify with the official event page before you go.</li>
-      </ul></article>
-      <article><h3>Food & Water</h3><ul>
-        <li>Many vendors are cashless—bring a card or mobile pay.</li>
-        <li>Hydrate early; find refill spots on concourses.</li>
-        <li>Family sections are great with kids; consider ear protection.</li>
-      </ul></article>
-      <article><h3>Accessibility</h3><ul>
-        <li>Check ADA parking, shuttle drop-offs, elevators, and seating.</li>
-        <li>Service animals typically permitted—follow venue guidance.</li>
-        <li>Contact accessibility office ahead for assistance.</li>
-      </ul></article>
-    </div>
-    <p class="muted">Independent fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
-  </section>
-</main>
+      <p id="schNote" class="muted">Times/TV subject to change. Check official sources day-of.</p>
+    </section>
+  </main>
 
-<footer class="sitefoot">
-  <p><strong>Unofficial notice:</strong> Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.</p>
-  <p>
-    <a href="guide.html">Guide</a> •
-    <a href="specials.html">Specials</a> •
-    <a href="map.html">Map</a> •
-    <a href="schedule.html">Schedule</a> •
-    <a href="submit.html">Submit</a>
-  </p>
-  <p class="muted">© 2025 HC Web Labs. Content licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a>.</p>
-</footer>
+  <footer class="sitefoot">
+    <p><strong>Unofficial notice:</strong> Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.</p>
+    <p><a href="guide.html">Guide</a> • <a href="specials.html">Specials</a> • <a href="map.html">Map</a> • <a href="schedule.html">Schedule</a> • <a href="submit.html">Submit</a></p>
+    <p class="muted">© 2025 HC Web Labs. Content licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a>.</p>
+  </footer>
 
-<!-- App JS (reads /data/*.json built by GitHub Actions) -->
-<script type="module" src="assets/js/app.js?v=2025-08-28-5"></script>
-<!-- Live scoreboard (NEW) -->
-<script type="module" src="assets/js/live.js?v=2025-08-28-5"></script>
+  <!-- scripts -->
+  <script type="module" src="assets/js/app.js?v=2025-08-28-7"></script>
+  <script type="module" src="assets/js/live.js?v=2025-08-28-7"></script>
 </body>
 </html>
